--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a {
 #showcase {
     margin: 0;
     padding: 0;
-    background: url(/img/showcase.jpg) no-repeat center/cover;
+    background: url(./showcase.jpg) no-repeat center/cover;
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -101,7 +101,7 @@ a {
 
 /* Enntertainemnt */
 #entertainment {
-    background: url(/img/section-bg.jpg) no-repeat bottom center/cover;
+    background: url(./section-bg.jpg) no-repeat bottom center/cover;
     color: #fff;
     padding: 10rem 0;
 }
